# MLServer

./: Dockerfile  pyproject.toml  strive-build.sh
hack/: build-image.sh  build-wheels.sh
lujan-hack/: Containerfile  Containerfile.old  build.sh
runtimes/alibi-detect/: pyproject.toml
runtimes/alibi-explain/: pyproject.toml
runtimes/huggingface/: pyproject.toml
runtimes/huggingface/mlserver_huggingface/: settings.py
runtimes/sklearn/: pyproject.toml
runtimes/xgboost/: pyproject.toml
