[tool.poetry]
name = "mlserver-huggingface"
version = "2.0.6"
description = "HuggingFace runtime for MLServer"
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "mlserver_huggingface"}]

[tool.poetry.dependencies]
python = ">=3.9,<3.12"
mlserver = "*"
tensorflow = "*"
pillow = "*"
optimum = {extras = ["onnxruntime"], version = ">=1.4,<2.0"}
pydantic = ">2.0.0,<3.0.0"
accelerate = "^0.27.2"
bitsandbytes = "^0.42.0"
sentence-transformers = "2.5.1"

[tool.poetry.group.dev.dependencies]
mlserver = {path = "../..", develop = true}
torch = "2.2.2"
transformers = ">=4.30,<5.0"
tensorflow = ">=2.12,<2.17"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
