[tool.poetry]
name = "mlserver-sklearn"
version = "1.6.1"
description = "Scikit-Learn runtime for MLServer"
authors = ["Seldon Technologies Ltd. <hello@seldon.io>"]
license = "Apache-2.0"
readme = "README.md"
packages = [{include = "mlserver_sklearn"}]

[tool.poetry.dependencies]
python = ">=3.11,<3.12"
scikit-learn = "1.8.0"
joblib = "1.4.2"
h11 = "0.16.*"
werkzeug = "3.*"
keras = "3.*"
transformers = "4.52.1"
filelock = "3.20.1"
pydantic = "2.11.7"

[tool.poetry.group.dev.dependencies]
mlserver = {path = "../..", develop = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
